tests/spec/emit/snapshots/for_loop_as_last_expression_in_block.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() {
    let _ = {
      for x in [1, 2, 3] {
        let _ = x
      }
    }
  }
---
package main

func test() {
	for _, x := range []int{1, 2, 3} {
		_ = x
	}
}
