tests/spec/emit/snapshots/for_loop_channel_alias_uses_single_var_range.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  type Inbox = Channel<int>
  
  fn drain(ch: Inbox) -> int {
    let mut total = 0
    for value in ch {
      total = total + value
    }
    total
  }
---
package main

type Inbox = chan int

func drain(ch Inbox) int {
	total := 0
	if ch != nil {
		for value := range ch {
			total += value
		}
	}
	return total
}
