tests/spec/emit/snapshots/for_loop_enumerate.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(items: Slice<string>) {
    for (i, item) in items.enumerate() {
      let _ = i;
      let _ = item;
    }
  }
---
package main

func test(items []string) {
	for i, item := range items {
		_ = i
		_ = item
	}
}
