tests/spec/emit/snapshots/for_loop_enumerate_both_wildcards.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(items: Slice<int>) {
    for _ in items.enumerate() {
      let x = 1;
    }
  }
---
package main

func test(items []int) {
	for range items {
	}
}
