tests/spec/emit/snapshots/for_loop_enumerate_wildcard_index.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(items: Slice<string>) {
    for (_, item) in items.enumerate() {
      let _ = item;
    }
  }
---
package main

func test(items []string) {
	for _, item := range items {
		_ = item
	}
}
