tests/spec/emit/snapshots/for_loop_inline_range_end_mutation_captured.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn main() {
    let mut n = 3
    let mut iters = 0
    for i in 0..n {
      iters += 1
      n = 0
      let _ = i
    }
    let _ = iters
  }
---
package main

func main() {
	n := 3
	iters := 0
	bound := n
	for i := range bound {
		iters++
		n = 0
		_ = i
	}
	_ = iters
}
