tests/spec/emit/snapshots/for_loop_iter_seq2_key_value.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:maps"
  import "go:fmt"
  
  fn main() {
    let m = Map.from([("a", 1)])
    for (k, v) in maps.All(m) {
      fmt.Println(f"{k}={v}")
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"maps"
)

func main() {
	m := lisette.MapFrom([]lisette.Tuple2[string, int]{lisette.MakeTuple2[string, int]("a", 1)})
	for k, v := range maps.All(m) {
		fmt.Printf("%s=%d\n", k, v)
	}
}
