tests/spec/emit/snapshots/for_loop_iter_seq_break.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:slices"
  import "go:fmt"
  
  fn main() {
    for n in slices.Values([1, 2, 3]) {
      if n > 1 {
        break
      }
      fmt.Println(f"{n}")
    }
  }
---
package main

import (
	"fmt"
	"slices"
)

func main() {
	for n := range slices.Values([]int{1, 2, 3}) {
		if n > 1 {
			break
		}
		fmt.Println(fmt.Sprint(n))
	}
}
