tests/spec/emit/snapshots/for_loop_iter_seq_compound_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:slices"
  import "go:fmt"
  
  struct Point {
    x: int,
    y: int,
  }
  
  fn main() {
    let points = [Point { x: 1, y: 2 }]
    for Point { x, y } in slices.Values(points) {
      fmt.Println(f"{x},{y}")
    }
  }
---
package main

import (
	"fmt"
	"slices"
)

type Point struct {
	x int
	y int
}

func main() {
	points := []Point{{
		x: 1,
		y: 2,
	}}
	for item := range slices.Values(points) {
		x := item.x
		y := item.y
		fmt.Printf("%d,%d\n", x, y)
	}
}
