tests/spec/emit/snapshots/for_loop_let_shadowing_does_not_leak.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> string {
    let x = "outside"
    for i in 0..3 {
      let x = i
      let _ = x
    }
    x
  }
---
package main

func test() string {
	x := "outside"
	for i := range 3 {
		x := i
		_ = x
	}
	return x
}
